background update and small fix to destructured object

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -10781,4 +10781,8 @@ textarea.form-control-lg {
   place-content: center;
 }
 
+body {
+  background-image: url(/assets/BG-GENERIC.svg);
+}
+
 /*# sourceMappingURL=main.css.map */
