--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -10786,6 +10786,7 @@ body {
 }
 
 .profileContainer {
+  margin-top: 15vh;
   place-content: center;
 }
 
@@ -10808,6 +10809,21 @@ body {
   height: 3px;
   bottom: 0;
   background-color: #041163;
+}
+
+.bannerAndAvatar {
+  position: relative;
+}
+
+.avatar {
+  position: absolute;
+  left: 1rem;
+  height: 80%;
+  top: 0.5rem;
+}
+
+.text-light {
+  --bs-text-opacity: .8;
 }
 
 /*# sourceMappingURL=main.css.map */
