--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -21,6 +21,7 @@ body {
     background-image: url(/assets/BG-GENERIC.svg)
 }
 .profileContainer {
+    margin-top: 15vh;
     place-content: center;
 
 }
@@ -28,6 +29,7 @@ body {
 //     background-color: rgba($color: #90a000, $alpha: .3);
 //     background-blend-mode: overlay;    
 // }
+
 .navbar-nav {
     width: fit-content;
     margin-left: auto;
@@ -45,4 +47,17 @@ body {
     height: 3px;
     bottom: 0;
     background-color: #041163;
+}
+
+.bannerAndAvatar {
+    position: relative;
+}
+.avatar {
+    position: absolute;
+    left: 1rem ;
+    height: 80%;
+    top: .5rem;
+}
+.text-light {
+    --bs-text-opacity: .8;
 }
