--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,68 +1,6 @@
-@import "override.scss";
 
 // BS import 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
-
-
-// Font
-@font-face {
-    font-family: 'Nabla';
-    src: url(../../assets/fonts/Nabla.ttf);
-}
-.header-title {
-    font-family: 'Nabla', cursive;
-}
-
-.custom-container {
-    place-content: center;
-}
-body {
-    background-image: url(/assets/BG-GENERIC.svg)
-}
-.profileContainer {
-    margin-top: 15vh;
-    place-content: center;
-
-}
-// .profileContainer>.row, .navbar-toggler, .navbar-nav {
-//     background-color: rgba($color: #90a000, $alpha: .3);
-//     background-blend-mode: overlay;    
-// }
-
-.navbar-nav {
-    width: fit-content;
-    margin-left: auto;
-    display: flex;
-    flex-direction: row;
-}
-.active {
-    position: relative;
-}
-.active::after {
-    content:'';
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 3px;
-    bottom: 0;
-    background-color: #041163;
-}
-
-.bannerAndAvatar {
-    position: relative;
-}
-.avatar {
-    position: absolute;
-    left: 1rem ;
-    height: 80%;
-    top: .5rem;
-}
-.text-light {
-    --bs-text-opacity: .8;
-}
-
-.searchContainer {
-    margin-top: 5rem;
-    
-}
+//Importing overrides
+@import "override.scss";
